--- a/package.json
+++ b/package.json
@@ -57,7 +57,13 @@
             "vuex": "^4.0.0",
             "vue-class-component": "8.0.0-rc.1",
             "vue": "$vue"
-        }
+        },
+        "minimist": ">=1.2.6",
+        "glob-parent": ">=5.1.3",
+        "node-forge": ">=1.2.2",
+        "nth-check": ">=2.0.1",
+        "markdown-it": ">=12.3.2",
+        "highlight.js": ">10.4.0"
     },
     "devDependencies": {
         "@cypress/vite-dev-server": "^2.2.2",
@@ -98,6 +104,6 @@
         "typescript": "~4.6.3",
         "vite": "^2.9.1",
         "vue-tsc": "^0.33.9",
-        "vuepress": "~1.8.2"
+        "vuepress": "~1.9.7"
     }
 }
